--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/14
 
 				<ul id="menu-menu1" class="main-menu dropdown-menu sf-menu">
 <li id="menu-item-212" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-7 current_page_item menu-item-212"><a href="https://preranabyahatti.github.io/website/" class="menu-link"><span class="text-wrap">Home</span></a></li>
-<li id="menu-item-213" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-213"><a href="https://preranabyahatti.github.io/website/about-us" class="menu-link"><span class="text-wrap">About Us</span></a></li>
-<li id="menu-item-214" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-214"><a href="https://preranabyahatti.github.io/website/services" class="menu-link"><span class="text-wrap">Services</span></a></li>
+<li id="menu-item-213" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-213"><a href="https://preranabyahatti.github.io/website/?page_id=110" class="menu-link"><span class="text-wrap">About Us</span></a></li>
+<li id="menu-item-214" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-214"><a href="https://preranabyahatti.github.io/website/?page_id=64" class="menu-link"><span class="text-wrap">Services</span></a></li>
 </ul>
 			</nav><!-- #site-navigation -->
 
