--- a/about-us/index.html
+++ b/about-us/index.html
@@ -162,9 +162,13 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/14
 		
 		
 		<a href="https://preranabyahatti.github.io/website/#mobile-menu-toggle" class="mobile-menu" aria-label="Mobile Menu">
-							<i class="fa fa-bars" aria-hidden="true"></i>
-								<span class="oceanwp-text">Menu</span>
-				<span class="oceanwp-close-text">Close</span>
+			<div class="hamburger hamburger--minus" aria-expanded="false" role="navigation">
+				<div class="hamburger-box">
+					<div class="hamburger-inner"></div>
+				</div>
+			</div>
+							<span class="oceanwp-text">Menu</span>
+			<span class="oceanwp-close-text">Close</span>
 						</a>
 
 		
